--- a/docs/_includes/grid/full-width-in-box.html
+++ b/docs/_includes/grid/full-width-in-box.html
@@ -1,45 +1,6 @@
 <div class="container">
   <div class="box">
     <h1>Full width in box</h1>
-    <div class="row ge-show-grid">
-      <div class="col-xs-12"><p>1/1</p></div>
-    </div>
-    <div class="row ge-show-grid">
-      <div class="col-xs-6"><p>1/2</p></div>
-      <div class="col-xs-6"><p>1/2</p></div>
-    </div>
-    <div class="row ge-show-grid">
-      <div class="col-xs-4"><p>1/3</p></div>
-      <div class="col-xs-4"><p>1/3</p></div>
-      <div class="col-xs-4"><p>1/3</p></div>
-    </div>
-    <div class="row ge-show-grid">
-      <div class="col-xs-3"><p>1/4</p></div>
-      <div class="col-xs-3"><p>1/4</p></div>
-      <div class="col-xs-3"><p>1/4</p></div>
-      <div class="col-xs-3"><p>1/4</p></div>
-    </div>
-    <div class="row ge-show-grid mobile-disable">
-      <div class="col-xs-2"><p>1/6</p></div>
-      <div class="col-xs-2"><p>1/6</p></div>
-      <div class="col-xs-2"><p>1/6</p></div>
-      <div class="col-xs-2"><p>1/6</p></div>
-      <div class="col-xs-2"><p>1/6</p></div>
-      <div class="col-xs-2"><p>1/6</p></div>
-    </div>
-    <div class="row ge-show-grid mobile-disable">
-      <div class="col-xs-1"><p>1/12</p></div>
-      <div class="col-xs-1"><p>1/12</p></div>
-      <div class="col-xs-1"><p>1/12</p></div>
-      <div class="col-xs-1"><p>1/12</p></div>
-      <div class="col-xs-1"><p>1/12</p></div>
-      <div class="col-xs-1"><p>1/12</p></div>
-      <div class="col-xs-1"><p>1/12</p></div>
-      <div class="col-xs-1"><p>1/12</p></div>
-      <div class="col-xs-1"><p>1/12</p></div>
-      <div class="col-xs-1"><p>1/12</p></div>
-      <div class="col-xs-1"><p>1/12</p></div>
-      <div class="col-xs-1"><p>1/12</p></div>
-    </div>
-  </div>
+    {% include grid/_boxes.html %}
+    {% include grid/_boxes_12.html %}
 </div>
