--- a/docs/_includes/voice/brand-statements.html
+++ b/docs/_includes/voice/brand-statements.html
@@ -5,7 +5,7 @@
   <h3>Communicate freely.</h3>
   <p class="small">Tagline</p>
 
-  <h3>To help anyone read and publish across languages, with one click.</h3>
+  <h3>To empower talented individuals with new opportunities and reach across the language barrier.</h3>
   <p class="small">Mission statement</p>
 
   <h3>Connect to people-powered translation with one click.</h3>
