Updates to style guide

--- a/docs/_includes/style/introduction.html
+++ b/docs/_includes/style/introduction.html
@@ -2,17 +2,17 @@
   <h1 id="introduction">Introducing the Gengo Style Guide</h1>
   <hr/>
   <p>Since our founding in 2008, the web and its technology have changed significantly. In that time our product has grown organically as well, making it a challenge for us to scale at speed in all areas of our platform.</p>
-  <p>To carry us into the future, we’ve created a style guide. This guide will help us build consistently and quickly without needing oversight for every pixel and will also help us focus more on workflows and logic rather than bits and pieces like buttons and list items. It outlines:</p>
+  <p>To carry us into the future, we’ve created a style guide. This guide will help us build consistently and quickly without needing oversight for every pixel and will also help us focus more on workflows and logic rather than bits and pieces like buttons and list items. This style guide outlines:</p>
   <ul>
-    <li>Logo, color and asset usage</li>
-    <li>Voice, tone and style</li>
+    <li>Logo, color, and asset usage</li>
+    <li>Voice, tone, and style</li>
     <li>Platform components and layout</li>
   </ul>
   <p>It’s also a living reference tool for developers, designers, marketers, product managers and others, including our partners and those who want to build on top of our brand or use our assets.</p>
 
   <h2>About Gengo style</h2>
   <p>With our brand, we aim to be simple but not simplistic, clean without being cold and efficient but not soulless in both our visual and written style—or, in the words of Dieter Rams, "Less, but better" (Weniger, aber besser).</p>
-  <p>Simplicity isn’t all that we strive for, however. Because we’re a tech company that offers human translation, we want for our brand and product to reflect the human aspect of our service. We do this primarily through color, typography and form.</p>
+  <p>Simplicity isn’t all that we strive for, however. Because we’re a tech company that offers human translation, we want our brand and product to reflect the human aspect of our service. We do this primarily through color, typography and form.</p>
   <p>Gengo’s colors are inspired by nature, with three shades of green (plant life), blue (water), beige (light), red (fire) and our supporting color, warm gray (soil). Our brand’s font, Open Sans, is a humanist font with gentle lines and high legibility across media, digital and print, and we use soft forms like rounded corners and circles.</p>
 
   <h2>Building a scalable platform</h2>
@@ -22,6 +22,6 @@
     <li>Makes using responsive media queries simple</li>
     <li>Takes a modular approach to styling through Sass</li>
   </ul>
-  <p>Because our users live all around the globe, it’s essential to offer them a platform that fits into their very different work environments and tools. Building on Bootstrap will benefit translators and customers alike as we continue to adapt our product to different screen sizes and devices.</p>
-  <p>Our vision is for everyone to read and publish across languages, with one click. From building our brand to expanding our platform, this style guide allows for us to create with the same simplicity. We hope that it serves you well, too.</p>
+  <p>Our users live all around the globe—so it’s essential to create a platform that functions in very different work environments and tools. Building on Bootstrap will benefit translators and customers alike as we continue to adapt our product to different screen sizes and devices.</p>
+  <p>Our vision is to empower talented people with access to new opportunities, so they can help anyone reach across language barriers. From building our brand to expanding our platform, this style guide allows for us to create with the same simplicity. We hope it serves you well, too.</p>
 </div>
