--- a/docs/_includes/voice/brand-character.html
+++ b/docs/_includes/voice/brand-character.html
@@ -5,7 +5,7 @@
   <div class="row">
     <div class="col-sm-12 col-md-6">
       <h3>Customer-facing: Airline Pilot</h3>
-      <p>We are cool, calm, collected—people trust us to do our job well. We are smart and exude confidence, but have a simple, straightforward communication style. We do a lot more than help customers order—most of the hard work is done before they come onboard.</p>
+      <p>We are cool, calm, collected; people trust us to do our job well. We are smart and exude confidence, but have a simple, straightforward communication style. We do a lot more than help customers order—most of the hard work is done before they come on board.</p>
 
       <h4>Brand traits:</h4>
       <ul class="list-unstyled customer">
