--- a/docs/_includes/voice/brand-statements.html
+++ b/docs/_includes/voice/brand-statements.html
@@ -5,9 +5,6 @@
   <h3>Communicate freely.</h3>
   <p class="small">Tagline</p>
 
-  <h3>To empower talented individuals with new opportunities and reach across the language barrier.</h3>
+  <h3>To empower talented people with access to new opportunities and reach across the language barrier.</h3>
   <p class="small">Mission statement</p>
-
-  <h3>Connect to people-powered translation with one click.</h3>
-  <p class="small">Positioning statement</p>
 </div>
