--- a/docs/_includes/voice/style-guide.html
+++ b/docs/_includes/voice/style-guide.html
@@ -48,8 +48,8 @@
   <ul>
     <li>Format dates as follows:
       <ul>
-        <li>Long form: month, date, year, e.g. Tuesday, September 27, 2011
-        <li>Short form: mm/dd/yyyy, e.g. 9/27/2011</li>
+        <li>Long form: month, date, year, e.g. Tuesday, December 1, 2008
+        <li>Short form: mm/dd/yyyy, e.g. 12/1/2008</li>
       </ul>
     <li>Do not write in military time. Indicate time of day using using a.m. and p.m. with time zone, if needed
       <ul>
@@ -57,7 +57,7 @@
         <li>e.g. 2:45 p.m., not 2:45 PM</li>
       </ul>
     </li>
-    <li>Please abbreviate time zones in capital letters and be aware of daylight savings time differences. Listing time zones for both parties is a good practice
+    <li>Abbreviate time zones in capital letters and be aware of daylight savings time differences. Listing time zones for both parties is a good practice
       <ul>
         <li>e.g. 8:15 p.m. PDT/12:15 p.m. JST</li>
       </ul>
@@ -72,14 +72,14 @@
 
   <h3>Commas ( , )</h3>
   <ul>
-    <li>Do not use the Oxford comma</li>
+    <li>Use the Oxford comma when appropriate</li>
     <li>Use a comma to separate two adjectives (if the word “and” can be inserted)</li>
     <li>Use a comma at the end of certain abbreviations (like i.e. and etc.)
     <ul>
       <li>e.g. Letters, packages, etc., should go here.</li>
     </ul>
     </li>
-    <li>Place commas within quotation marks</li>
+    <li>Place commas inside the closing quotation mark</li>
   </ul>
 
   <h3>Quotation marks ( “ ” and ‘ ’ )</h3>
