Finalize mission statement

--- a/docs/_includes/voice/brand-statements.html
+++ b/docs/_includes/voice/brand-statements.html
@@ -5,6 +5,6 @@
   <h3>Communicate freely.</h3>
   <p class="small">Tagline</p>
 
-  <h3>To empower talented people with access to new opportunities and reach across the language barrier.</h3>
+  <h3>Empower talented people everywhere to help the world communicate.</h3>
   <p class="small">Mission statement</p>
 </div>
