Update css and docs

--- a/scss/_icons.scss
+++ b/scss/_icons.scss
@@ -186,6 +186,9 @@
     content: "\3e";
   }
 }
+.icon-heart:before {
+  content: "\e9";
+}
 
 .search-input-icon {
   background-image: url("../images/search.png");
