--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -1,3 +1,6 @@
+@use "sass:math";
+@use "sass:map";
+
 // centered columns styles
 .row-centered {
   text-align: center;
@@ -12,15 +15,15 @@
 }
 
 .box {
-  padding-right: ($grid-gutter-width / 2);
-  padding-left: ($grid-gutter-width / 2);
+  padding-right: math.div($grid-gutter-width, 2);
+  padding-left: math.div($grid-gutter-width, 2);
   padding-bottom: 21px;
   border: 1px solid #dbdbdb;
   border-radius: 3px;
-  background-color: $box-bg;
+  background-color: $box-shadow;
   margin-bottom: 36px;
 
-  @media (min-width: $screen-sm-min) {
+  @media (min-width: map.get($grid-breakpoints, "md")) {
     padding-right: $grid-gutter-width;
     padding-left: $grid-gutter-width;
   }
@@ -40,9 +43,9 @@
   padding-right: 12px;
   padding-left: 12px;
 }
-@media (min-width: $screen-sm-min) {
+@media (min-width: map.get($grid-breakpoints, "md")) {
   [class*="col-"] {
-    padding-right: ($grid-gutter-width / 2);
-    padding-left: ($grid-gutter-width / 2);
+    padding-right: math.div($grid-gutter-width, 2);
+    padding-left: math.div($grid-gutter-width, 2);
   }
 }
