--- a/scss/_type.scss
+++ b/scss/_type.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 // Body text
 // -------------------------
 
@@ -26,7 +28,7 @@ ol {
 }
 
 blockquote {
-  margin: 0 0 ($grid-gutter-width / 2) ($grid-gutter-width / 2);
-  padding: 0 ($grid-gutter-width / 2);
-  border-left: 3px solid $blockquote-border-color;
+  margin: 0 0 (math.div($grid-gutter-width, 2)) math.div($grid-gutter-width, 2);
+  padding: 0 math.div($grid-gutter-width, 2);
+  border-left: 3px solid $blockquote-footer-color;
 }
